--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,14 @@
 # prevent it from being included in the site.
 
 main:
+  - title: "Curriculum Vitae"
+    url: /cv/
+
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Software"
+    url: /software/
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Contact"
+    url: /contact/
