Added media coverage and pdf copies

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,5 +14,8 @@ main:
   - title: "Software"
     url: /software/
 
+  - title: "Media Coverage"
+    url: /media/
+
   - title: "Contact"
     url: /contact/
