--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Resume"
+  - title: "Professional Profile"
     url: /cv/
 
   - title: "Publications"
